# jouleverksted

./: .default.env  .gitignore  Caddyfile  Cargo.toml  README.md
.cargo/: config.toml
public/: index.html
src/: http.rs  lights.rs  main.rs  message.rs  wifi.rs
src/templates/: layout.html
