[package]
name = "jouleverksted"
version = "0.1.0"
authors = ["Iver Karlsbakk Småge stasj <iverks@stud.ntnu.no>"]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[dependencies]
anyhow = "1"
dotenv_codegen = "0.15.0"
embedded-hal = "0.2.7"
embedded-svc = "0.25.3"
esp-idf-hal = "0.41.2"
esp-idf-svc = "0.46.0"
esp-idf-sys = { version = "0.33.1", features = ["binstart"] }
http = "0.2.8"
log = "0.4.17"
minijinja = "1.0.4"
smart-leds = "0.3.0"
smart-leds-trait = "0.2.1"
tokio = { version = "1.29.1", features = ["rt", "rt-multi-thread", "macros"] }
ws2812-esp32-rmt-driver = "0.5.0"


[build-dependencies]
embuild = "0.31.2"
anyhow = "1"
